syntax = "proto3";

package com.grpcspringboot;

option java_multiple_files = true;

message Book {
  int32 book_id = 1;
  string title = 2;
  float price = 3;
  int32 pages = 4;
  int32 author_id = 5;
}

message Author {
  int32 author_id = 1;
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  int32 book_id = 5;
}

service BookAuthorService {
  // unary
  rpc getAuthor(Author) returns(Author) {}

  // Server Streaming
  rpc getBooksByAuthor(Author) returns (stream Book) {}

  // Client Streaming
  rpc getExpensiveBook(stream Book) returns (Book) {}

  // Bi-Directional Streaming
  rpc getBookByAuthorGender(stream Book) returns (stream Book) {}

}